src/ion/test/fail/invalid_addition.ion
x: < 0.0 = -1.0
//  cannot assign (< 10.0) to variable of type (< 0.0)
x += 10.0
